# voice2text

./: .gitignore  BASELINE.toml  PROJECT-HANDBOOK.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
.codebuddy/plans/: 小柳语音转写_桌面应用方案_3baae62d.md
.codebuddy/skills/: release.md  workflow.md
.githooks/: post-commit
scripts/: auto-push-on-version.sh  build-dmg.sh  build.sh  bundle-all.sh  bundle-ffmpeg.sh  copy-dylibs.sh  copy-ffmpeg.sh  dev-tail.sh  fix-dylibs.sh
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/resources/bundled/: ffmpeg
src-tauri/resources/ffmpeg-bundle/: ffmpeg  libavdevice.62.dylib  libavfilter.11.dylib  libavformat.62.dylib  libavutil.60.dylib  libmp3lame.0.dylib  libmpg123.0.dylib  libssl.3.dylib  libswresample.6.dylib  libswscale.9.dylib  libvmaf.3.dylib
src-tauri/resources/whisper-cli-bundle/: libggml-base.0.dylib  libggml.0.dylib  libomp.dylib  libwhisper.1.dylib  whisper-cli
src-tauri/src/: commands.rs  deploy.rs  lib.rs  main.rs  platform.rs  postprocess.rs  transcribe.rs
src-tauri/src/engine/: download.rs  mod.rs  python_whisper.rs  whisper_cpp.rs
src-tauri/src/postprocess/: t2s.rs
src/lib/: api.js
src/lib/components/: DropZone.svelte  FileList.svelte  ResultView.svelte  SettingsPanel.svelte
